--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,6 @@
       "omnics\\packemails\\": "src/"
     }
   },
-  "minimum-stability": "1.0.0",
+  "minimum-stability": "dev",
   "prefer-stable": true
 }
